fix: Fix issue of horizontal scrolling is not working
- Remove the overflow hidden in pdf-renderer element

- Update the ModalDocViewer to handle both vertical and horizontal scrolling

- Change the bg color of the component

- Update the nav bar to span the whole width of the component when the horizontal scroll is on

--- a/resources/css/docViewer.css
+++ b/resources/css/docViewer.css
@@ -14,9 +14,7 @@
 } */
 
 #pdf-renderer {
-    overflow: hidden;
     display: flex;
-    /* height: 100vh; */
 }
 
 #pdf-controls {
